<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewApt1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/condo"/>

        <CheckBox
            android:id="@+id/checkbox_apt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condo_1_address_price"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewApt2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/condo2"/>

        <CheckBox
            android:id="@+id/checkbox_apt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condo_2_address_price"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_checkout"/>
</LinearLayout>
